[gd_scene load_steps=18 format=3 uid="uid://6r0hwy3ijx5f"]

[ext_resource type="Script" path="res://GUI/Controles/controletoque.gd" id="1_6ks27"]
[ext_resource type="Texture2D" uid="uid://cuea70ofd5epd" path="res://GUI/Controles/transparentLight08.png" id="2_tnwsv"]
[ext_resource type="Texture2D" uid="uid://be1w83reg4i6q" path="res://GUI/Controles/transparentDark08.png" id="3_m0ms0"]
[ext_resource type="Texture2D" uid="uid://dt5426d345kep" path="res://GUI/Controles/transparentLight03.png" id="4_8tt5h"]
[ext_resource type="Texture2D" uid="uid://cqvjevq3pnr2l" path="res://GUI/Controles/transparentLight04.png" id="5_05swi"]
[ext_resource type="Texture2D" uid="uid://dwepdrbftpkca" path="res://GUI/Controles/transparentDark03.png" id="5_i6lfy"]
[ext_resource type="Texture2D" uid="uid://b8xafc84pfoqm" path="res://GUI/Controles/controlepulo.png" id="5_qwhvk"]
[ext_resource type="Texture2D" uid="uid://co4ji2hklrgnk" path="res://GUI/Controles/presspulo.png" id="6_0dx5n"]
[ext_resource type="Texture2D" uid="uid://chfpd30ejlcsy" path="res://GUI/Controles/transparentDark04.png" id="7_bj82w"]
[ext_resource type="Texture2D" uid="uid://dcl5urr1u45hj" path="res://GUI/Controles/tiro.png" id="8_1tkvm"]
[ext_resource type="Texture2D" uid="uid://bv5mmm0gm16r" path="res://GUI/Controles/presstiro.png" id="9_jfr4v"]
[ext_resource type="Texture2D" uid="uid://dcgi67gumry88" path="res://GUI/Controles/ataque.png" id="10_np2q5"]
[ext_resource type="Texture2D" uid="uid://45rd7xy0kdur" path="res://GUI/Controles/pressataque.png" id="11_adolr"]
[ext_resource type="Texture2D" uid="uid://dq3ulo5ver1jo" path="res://GUI/Controles/transparentLight19.png" id="14_gwe5s"]
[ext_resource type="Texture2D" uid="uid://b3upyetnj2nbw" path="res://GUI/Controles/barra de vida.png" id="14_krhtq"]
[ext_resource type="Texture2D" uid="uid://cei7a6cmd3tfx" path="res://GUI/Controles/transparentDark19.png" id="15_kpvma"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cm73x"]

[node name="ControleTouch" type="CanvasLayer"]
script = ExtResource("1_6ks27")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 2.0
offset_top = 78.0
offset_right = 42.0
offset_bottom = 118.0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -642.0
offset_right = 1150.0
offset_bottom = -2.0
grow_vertical = 0

[node name="Descer" type="TouchScreenButton" parent="Control"]
position = Vector2(148, 524)
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("2_tnwsv")
texture_pressed = ExtResource("3_m0ms0")
action = "ui_down"

[node name="Esquerda" type="TouchScreenButton" parent="Control"]
position = Vector2(45, 451)
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("4_8tt5h")
texture_pressed = ExtResource("5_i6lfy")
action = "ui_left"

[node name="Direita" type="TouchScreenButton" parent="Control"]
position = Vector2(227, 451)
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("5_05swi")
texture_pressed = ExtResource("7_bj82w")
action = "ui_right"

[node name="Pulo" type="TouchScreenButton" parent="Control"]
position = Vector2(1455, 501)
scale = Vector2(1.574, 1.6)
texture_normal = ExtResource("5_qwhvk")
texture_pressed = ExtResource("6_0dx5n")
action = "ui_up"

[node name="Tiro" type="TouchScreenButton" parent="Control"]
position = Vector2(1468, 384)
scale = Vector2(1.3, 1.3)
texture_normal = ExtResource("8_1tkvm")
texture_pressed = ExtResource("9_jfr4v")
passby_press = true
action = "tiro"

[node name="Ataque" type="TouchScreenButton" parent="Control"]
position = Vector2(1312, 510)
scale = Vector2(1.4, 1.4)
texture_normal = ExtResource("10_np2q5")
texture_pressed = ExtResource("11_adolr")
action = "ataque"

[node name="Cura" type="TouchScreenButton" parent="Control"]
position = Vector2(100, -30)
scale = Vector2(15, 10)
shape = SubResource("RectangleShape2D_cm73x")
action = "cura"

[node name="Dash" type="TouchScreenButton" parent="Control"]
position = Vector2(1330, 425)
scale = Vector2(1.5, 1.35417)
texture_normal = ExtResource("14_gwe5s")
texture_pressed = ExtResource("15_kpvma")
action = "dash"

[node name="HealthText" type="Label" parent="Control"]
layout_mode = 0
offset_left = 48.0
offset_top = -66.6
offset_right = 301.0
offset_bottom = 13.4
theme_override_colors/font_shadow_color = Color(0.498039, 0, 0, 1)
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_group_ = true

[node name="HealCountText" type="Label" parent="Control"]
layout_mode = 0
offset_left = 61.0
offset_top = 19.0
offset_right = 101.0
offset_bottom = 61.0
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="BarraDeVida" type="Sprite2D" parent="Control"]
z_index = -1
position = Vector2(122, 0.400002)
scale = Vector2(0.4, 0.382)
texture = ExtResource("14_krhtq")
metadata/_edit_group_ = true

[connection signal="pressed" from="Control/Descer" to="." method="_on_descer_pressed"]
[connection signal="released" from="Control/Descer" to="." method="_on_descer_released"]
[connection signal="pressed" from="Control/Esquerda" to="." method="_on_esquerda_pressed"]
[connection signal="released" from="Control/Esquerda" to="." method="_on_esquerda_released"]
[connection signal="pressed" from="Control/Direita" to="." method="_on_direita_pressed"]
[connection signal="released" from="Control/Direita" to="." method="_on_direita_released"]
[connection signal="pressed" from="Control/Pulo" to="." method="_on_pulo_pressed"]
[connection signal="released" from="Control/Pulo" to="." method="_on_pulo_released"]
[connection signal="pressed" from="Control/Tiro" to="." method="_on_tiro_pressed"]
[connection signal="released" from="Control/Tiro" to="." method="_on_tiro_released"]
[connection signal="pressed" from="Control/Ataque" to="." method="_on_ataque_pressed"]
[connection signal="released" from="Control/Ataque" to="." method="_on_ataque_released"]
[connection signal="pressed" from="Control/Cura" to="." method="_on_cura_pressed"]
[connection signal="pressed" from="Control/Dash" to="." method="_on_dash_pressed"]
